@@ -5,7 +5,7 @@ lvchange \- change attributes of a logical volume
 .B lvchange
 [\-\-addtag Tag]
 [\-A/\-\-autobackup y/n] [\-a/\-\-available y/n/ey/en/ly/ln]
-[\-\-alloc AllocationType]
+[\-\-alloc AllocationPolicy]
 [\-C/\-\-contiguous y/n] [\-d/\-\-debug] [\-\-deltag Tag]
 [\-h/\-?/\-\-help]
 [\-\-ignorelockingfailure]
