@@ -4,6 +4,7 @@ lvcreate \- create a logical volume in an existing volume group
 .SH SYNOPSIS
 .B lvcreate
 [\-\-addtag Tag]
+[\-\-alloc AllocationPolicy]
 [\-A/\-\-autobackup y/n] [\-C/\-\-contiguous y/n] [\-d/\-\-debug]
 [\-h/\-?/\-\-help]
 [\-i/\-\-stripes Stripes [\-I/\-\-stripesize StripeSize]]
