@@ -3,6 +3,7 @@
 lvextend \- extend the size of a logical volume
 .SH SYNOPSIS
 .B lvextend
+[\-\-alloc AllocationPolicy]
 [\-A/\-\-autobackup y/n] [\-d/\-\-debug] [\-h/\-?/\-\-help]
 [\-i/\-\-stripes Stripes [\-I/\-\-stripesize StripeSize]]
 {\-l/\-\-extents [+]LogicalExtentsNumber |
